<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkbackground"
    tools:context=".InsideNoteActivity">

    <TextView
        android:id="@+id/in_dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/actor"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/in_TitleEditView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/custom_edittext"
        android:ellipsize="middle"
        android:ems="10"
        android:fadeScrollbars="false"
        android:fontFamily="@font/actor"
        android:gravity="top"
        android:inputType="text|textLongMessage|textMultiLine"
        android:padding="15dp"
        android:text="Yazmaya Başla"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_dateTextView" />

    <EditText
        android:id="@+id/in_detailEditView"
        android:layout_width="0dp"
        android:layout_height="224dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_edittext"
        android:cursorVisible="true"
        android:drawableTintMode="src_in"
        android:drawingCacheQuality="auto"
        android:elegantTextHeight="true"
        android:ellipsize="middle"
        android:ems="10"
        android:fadeScrollbars="false"
        android:fontFamily="@font/actor"
        android:gravity="top"
        android:inputType="text|textLongMessage|textMultiLine"
        android:padding="15dp"
        android:text="Yazmaya Başla"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/in_TitleEditView"
        app:layout_constraintStart_toStartOf="@+id/in_TitleEditView"
        app:layout_constraintTop_toBottomOf="@+id/in_TitleEditView" />

    <Button
        android:id="@+id/in_deleteButton"
        android:layout_width="254dp"
        android:layout_height="58dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custombutton"
        android:text="@string/in_delete"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_hideSwitch" />

    <Button
        android:id="@+id/in_saveButton"
        android:layout_width="254dp"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custombutton"
        android:text="@string/in_save"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_deleteButton" />

    <Switch
        android:id="@+id/in_hideSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/in_hidden_switch"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/in_detailEditView" />


</androidx.constraintlayout.widget.ConstraintLayout>